# forge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/bundlers/: bundle-input.js  minify.js  package.json
assets/livereload/: script.js  script.min.js
assets/minifiers/: minifiers_bundle.js
examples/forge-website/: forge.yaml  package-lock.json  package.json
examples/forge-website/content/pages/: docs.html  guide.html  index.html
examples/forge-website/static/: build.css  build.min.css  main.js  styles.css
examples/forge-website/templates/: base.html
src/: main.cpp
src/core/: frontmatter.cpp  frontmatter.hpp  html_minifier.cpp  html_minifier.hpp  js_minifier.cpp  js_minifier.hpp  markdown.cpp  markdown.hpp  site_builder.cpp  site_builder.hpp  template_engine.hpp
src/server/: dev_server.cpp  dev_server.hpp  preview_server.cpp  preview_server.hpp  server.hpp  websocket_manager.hpp
src/utils/: build_info.hpp  config.hpp  file_watcher_listener.cpp  file_watcher_listener.hpp
templates/minimal/: forge.yaml
templates/minimal/content/blog/: my-blog-post.md
templates/minimal/content/pages/: about.html  blog.html  index.html
templates/minimal/static/: styles.css
templates/minimal/templates/: base.html  post.html
